--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <html>
   <head>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <link rel='stylesheet' href='style.css'>
+
+    <style>
+      table {
+        border-collapse: collapse;
+        border: 2px black solid;
+        font: 12px sans-serif;
+        border-spacing: 0;
+
+      }
+
+      td,th {
+        border: 1px black solid;
+        padding: 5px;
+        width: 200px;
+      }
+
+    </style>
+
+
   </head>
   <body>
     <script type='text/javascript' src='script.js'></script>
