Colors are filled correctly now

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </style>
 
   </head>
-  <h1>Graph Filler</h1>
+  <h1>Visual Analytics 2020 project: Graph Filler </h1>
 
-  <p><b>What:</b> Visualization of Income inequality Rate (blue) and Economic Freedom indicators (red) </p>
+  <p><b>What:</b> Visualization of Income inequality Rate (blue) and Economic Freedom indicators (red) <br />
+    <b>Why:</b> Is important to understand how different indicators of the economic freedom are related with the Income inequality <br />
+    <b>How:</b> You can see the Income inequality column and indicators for each country by year. You can select the year in which you are interested with the slider at the bottom. You can select up to 15 countries and up to 5 different indicators to compare from the panels at the right
+  </p>
 
-  <p><b>Why:</b>Is important to understand how different indicators of the economic freedom are related with the Income inequality </p>
-
-  <p><b>How:</b>You can see the Income inequality column and indicators for each country by year. You can select the year in which you are interested with the slider at the bottom. You can select up to 15 countries and up to 5 different indicators to compare from the panels at the right</p>
   <body>
     <table style="width: 100%;border-width: 0px;"  >
       <tr >
