changes in layout

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
       .header {
         padding: 5px;
-        text-align: justify-all;
+        text-align: center;
         background: #0b8176;
         color: white;
       }
 
       .footer {
         padding: 20px;
-        text-align: left;
+        text-align: justify-all;
         background: #0b8176;
         color: white;
         font-size: 20px;
@@ -49,10 +49,10 @@
       .mydivclass {overflow-x: hidden; overflow-y: auto;}
 
     </style>
-
+  <title>Inecome Inequality vs EF indicators</title>
   </head>
   <div class="header">
-    <h1> Visual Analytics 2020 project: Graph Filler </h1>
+    <h1> VA 2020 project: Income Inequality vs Economic Freedom indicators </h1>
   </div>
   <body class="mydivclass">
     <table style="width: 100%;border-width: 0px;"  >
@@ -112,7 +112,7 @@
             <td style=" border-width: 0px">
                 <div class="col-sm"><div id="slider-range"></div></div>
             </td>
-            
+
           </tr>
         </table>
       </div>
@@ -120,9 +120,13 @@
 
     <div class="footer">
       <h4>About:</h4>
-      <b>What:</b> Visualization of Income inequality Rate (blue) and Economic Freedom indicators (red) <br />
-        <b>Why:</b> Is important to understand how different indicators of the economic freedom are related with the Income inequality <br />
-        <b>How:</b> You can see the Income inequality column and indicators for each country by year. You can select the year in which you are interested with the slider at the bottom. You can select up to 15 countries and up to 5 different indicators to compare from the panels at the right
+      <b>What:</b> Visualization of income inequality rate and economic freedom indicators. <br />
+        <b>Why:</b> Is important to understand how different indicators of the economic freedom correlates with the income inequality rate.<br />
+        <b>How:</b> You can see the income inequality column and indicators columns for each country by year.<br />
+      You can select up to 15 countries and up to 5 different indicators to compare from the panels at the right.<br />
+      You can select the year in which you are interested with the first slider at the bottom.<br />
+      You can select a range of years for which the table will show the correlation between the income inequality rate and each selected economic freedom indicator.
+
     </div>
 
 
