Range of years moved upwards

--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
     <h1> VA 2020 project: Income Inequality vs Economic Freedom indicators </h1>
   </div>
   <body class="mydivclass">
+  <!-- Slider -->
+  <div >
+    <table >
+      <!--
+      <tr style="column-width: fill-available">
+          <td style="border-width: 0px">
+            Select year for details:
+          </td>
+          <td style="border-width: 0px">
+            <div class="col-sm"><div id="slider-time" ></div></div>
+          </td>
+      </tr> -->
+    </table>
+    <table>
+      <tr>
+        <td style="border-width: 0px;width: 25%;padding: 1%;">
+          Select range of years for correlation colors in indicators column:
+        </td>
+        <td style=" border-width: 0px">
+          <div class="col-sm"><div id="slider-range"></div></div>
+        </td>
+
+      </tr>
+    </table>
+  </div>
+
     <table style="width: 100%;border-width: 0px;"  >
       <tr >
         <td style="width: 60%;border-width: 0px;vertical-align: top" >
@@ -92,31 +118,7 @@
     </table>
 
 
-      <!-- Slider -->
-      <div >
-        <table >
-            <!--
-            <tr style="column-width: fill-available">
-                <td style="border-width: 0px">
-                  Select year for details:
-                </td>
-                <td style="border-width: 0px">
-                  <div class="col-sm"><div id="slider-time" ></div></div>
-                </td>
-            </tr> -->
-        </table>
-        <table>
-          <tr>
-            <td style="border-width: 0px">
-              Select range of years for correlation colors in indicators column:
-            </td>
-            <td style=" border-width: 0px">
-                <div class="col-sm"><div id="slider-range"></div></div>
-            </td>
 
-          </tr>
-        </table>
-      </div>
 
 
     <div class="footer">
