sorting issue fixed

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                   <div id="selectionIndicators"></div>
                 </td>
               </tr>
+              <tr>
+                <div id="svg-container"></div>
+              </tr>
               </tbody>
             </table>
           </div>
