Correlation colors explained

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <table>
       <tr>
         <td style="border-width: 0px;width: 25%;padding: 1%;">
-          Select range of years for correlation colors in indicators column:
+          <h5>Select range of years for correlation colors in indicators column:</h5>
         </td>
         <td style=" border-width: 0px">
           <div class="col-sm"><div id="slider-range"></div></div>
@@ -110,8 +110,36 @@
                   <div id="selectionIndicators"></div>
                 </td>
               </tr>
+              </tbody>
+            </table>
+            <h5>Indicators columns correlation color code</h5>
+            <table>
+              <tbody>
+              <tr style="border-width: 0px;width: 100%">
+                <th style="border-width: 0px;align-content: end">
+                  Strongly Negative
+                </th>
+                <th style="border-width: 0px;align-content: end">
+                  Weekly Negative
+                </th>
+                <th style="border-width: 0px;text-align: center">
+                   -
+                </th>
+                <th style="border-width: 0px;align-content: end">
+                  Weekly Positive
+                </th>
+                <th style="border-width: 0px;align-content: end">
+                  Strongly Positive
+                </th>
+              </tr>
+              </tbody>
+            </table>
+            <table>
+              <tbody>
               <tr>
-                <div id="svg-container"></div>
+
+                  <input style="width: 600px;height: 50px;background: linear-gradient(to right,#ed5749 11%,rgba(255,94,80,0.53) 22%,rgba(255,94,80,0.53) 33%,#e5e5e5 44%,#e5e5e5 55%,rgba(88,151,242,0.5) 66%,rgba(88,151,242,0.5) 77%,#4f7ecf 88%,#4f7ecf 99%);border-width: 0px">
+
               </tr>
               </tbody>
             </table>
