update on description

--- a/index.html
+++ b/index.html
@@ -65,15 +65,19 @@
 
   <div class="container-fluid bg-2 text-center">
     <h2 style="color:#65a2c7"><em>About</em></h2>
-    <h4 style="text-align: justify"> The visualization focuses on the exploration of the relationship between income inequality rate and the indicators of economic freedom. We would like to demonsrate how income inequality rate correlates between each indicators of economic freedom</h4>
+    <h4> The visualization focuses on the exploration of the relationship between income inequality rate and the indicators of economic freedom</h4>
+    <h4> We would like to demonsrate how income inequality rate correlates between each indicators of economic freedom</h4>
     <br>
 
     <h2 style="color:#65a2c7"><em>Income Inequality Rate</em></h2>
-    <h4 style="text-align: justify"> Each country has income inequality rate information ranges between 0 to 10 over time. The rate of O indicates the lowest income inequality exist and the rate of 10 indicates the highest income inequality</h4>
+    <h4> Each country has income inequality rate information ranges between 0 to 10 over time</h4>
+    <h4> The rate of O indicates the lowest income inequality exist and the rate of 10 indicates the highest income inequality</h4>
     <br>
 
     <h2 style="color:#65a2c7"><em>How to Use </em></h2>
-    <h4 style="text-align: justify"> Select countries that you would like to investigate. Select the attributes that you would like to see the correlation between the income inequality rate. Select a specific year interval that you are interested in</h4>
+    <h4> Select countries that you would like to investigate</h4>
+    <h4> Select the attributes that you would like to see the correlation between the income inequality rate</h4>
+    <h4> Select a specific year interval that you are interested in</h4>
   </div>
 
   <div class="mydivclass">
