--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
   </div>
     <script type='text/javascript' src='script.js'></script>
   </body>
-  <footer class="container-fluid bg-2 text-center">
-    <p> Made By Pablo and Buse</a></p>
+  <footer class="container-fluid bg-2">
+    <p>This web site was build to showcase an interactive visualization using data about indicators presented in the economic freedom index from 30 countries located in Europe from 2000 to 2018 (https://www.heritage.org/index/). We combined this dataset with the income inequality ratio of the same period taken from eurostat(http://appsso.eurostat.ec.europa.eu/nui/show.do?dataset=ilc_di11&lang=en). 
+<p>
+<b> Disclaimer:</b> Although some insights could be obtained from this work, please refer to the original sources if interested in validation for further analysis.
+</p>
   </footer>
 </html>
